update restart method